# siena-coding-comp

./: .gitmodules  README.md  pyproject.toml  ruff.toml
.github/: ci.yml
src/2021/gold/: fifth.py  first.py  fourth.py  seventh.py  sixth.py  third.py
src/2021/green/: fifth.py  first.py  fourth.py  second.py  seventh.py  sixth.py  third.py
src/2022/gold/: first.py  second.py  seventh.py  third.py
src/2022/green/: fifth.py  first.py  fourth.py  second.py  seventh.py  sixth.py  third.py
src/2023/gold/: fifth.py  first.py  fourth.py  second.py  seventh.py  sixth.py  third.py
src/2023/green/: fifth.py  first.py  fourth.py  second.py  seventh.py  sixth.py  third.py
src/2024/gold/: seventh.py
src/2024/green/: seventh.py  sixth.py
src/2025/gold/: first.py  fourth.py  second.py  seventh.py  sixth.py  third.py
src/2025/green/: fifth.py  first.py  fourth.py  second.py  seventh.py  sixth.py  third.py
src/bonus/: bonus.py
src/extras/: memoization.py  recursion.py  recursiveBacktracking.py
src/extras/memoization/: fibonacci.py
src/extras/recursion/: fibonacci.py  permutations.py
